[PORT] All those .vscode stuff that wasn't included

--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,7 @@ Temporary Items
 *.sublime-workspace
 
 #Visual studio stuff
-*.vscode/*
+# *.vscode/*
 /tools/MapAtmosFixer/MapAtmosFixer/obj/*
 /tools/MapAtmosFixer/MapAtmosFixer/bin/*
 /tools/CreditsTool/bin/*
